# oprish

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dump.rdb
.github/workflows/: ci.yml
src/: cors.rs  main.rs  producer.rs  ratelimit.rs  tests.rs
src/routes/: mod.rs  ratelimits.rs
src/routes/messages/: mod.rs
tests/: docker-compose.yml
