[package]
name = "oprish"
version = "0.3.0-rc.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
log = "0.4.17"
env_logger = "0.9.0"
todel = { git = "https://github.com/eludris/todel", features = ["oprish"] }
deadpool-redis = "0.10.2"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis"] }
dotenv = "0.15.0"
